# irc-websockets

./: .gitignore  Cargo.toml  README.md  channels.sql  env.example  package-lock.json  package.json  tsconfig.json
.github/workflows/: node.yml
console/: console.ts
db/migrations/: 1704732343_create_accounts.sql  1704732343_create_users.sql  1704732344_add_account_blocked.sql  1706700302_create_webhooks.sql  1706847790_snake_case_all_tables.sql  1706848684_create_channels.sql  1706849902_create_webhooks.sql  1706860767_add_channel_id_to_webhooks.sql  1706937091_rename_accounts_to_users.sql  1706937092_rename_users_blocked_to_is_blocked.sql  1706937093_drop_uniq_from_webhooks_name.sql  1706937094_add_users_is_admin_default.sql  1706937095_channels_is_private.sql  1706939462_drop_table_users.sql  1706939463_drop_table_webhooks.sql  1707009916_create_servers.sql  1707009917_add_server_to_channel.sql  1707009918_add_server_to_webhook.sql  1707009919_drop_webhooks.sql  1707009921_drop_channels.sql  1719550818_create_channel_members.sql  1723626502_create_friends.sql  1723626503_create_messages.sql
rust/: config.rs  history.rs  http_api.rs  irc_bridge.rs  main.rs  state.rs  types.rs  util.rs  ws.rs
rust/models/: channel.rs  channel_member.rs  mod.rs  server.rs  user.rs  webhook.rs
src/: bridge_connections.ts  history.ts  index.ts  irc.ts  session_users.ts  socket.io.ts  users.ts
src/base/: config.ts  db.ts  math.ts  token.ts
src/db/: cli.ts  seed.ts
src/features/: accounts.ts  channels.ts  messages.ts  rate_limit.ts  servers.ts  typing.ts  webhooks.ts
(+10 files in other folders)
