[package]
name = "irc-websockets-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# We use a custom bin path to avoid clobbering existing TS src/
[[bin]]
name = "irc-websockets"
path = "rust/main.rs"

[[bin]]
name = "db-cli"
path = "rust/bin/db_cli.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "json"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
dotenvy = "0.15"
futures = "0.3"
parking_lot = "0.12"
rand = "0.8"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socketioxide = { version = "0.17", features = ["state"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
once_cell = "1"

# IRC client
irc = { version = "1.1", default-features = false, features = ["tls-native"] }
